# datasurface

./: .cursorrules  .flake8  .gitignore  CODE-OF-CONDUCT.md  DDL_COLUMN_EXAMPLE.md  DDL_TABLE_EXAMPLE.md  Dockerfile  Dockerfile.datasurface  July_MVP_Plan.md  LICENSE.txt  MANIFEST.in  MVP_DynamicDAG.md  MVP_Kubernetes_Infrastructure_Setup.md  README.adoc  README.md  ROADMAP.md  TODO.adoc  TODO.md  efs-storageclass.yaml  iam-policy-nodegroup.json  list_utils.py  pyrightconfig.json  pyvenv.cfg  requirements.txt  setup.cfg  setup.py  workspace-views-test-job.yaml
.cursor/rules/: markdown_usage.mdc  pylance-usage.mdc
.github/workflows/: publish-docker-image.yml  publish-to-test-pypi.yml  python-package.yml
Diary/: 2024_10.md  README.md
Diary/BillyN/: 2024_10.md  2024_11.md  2024_12.md  2025_01.md  2025_02.md  2025_03.md  2025_04.md  2025_05.md  2025_06.md  2025_07.md  (+3 more)
docs/: ArchitecturalDecisions.md  BrokerRenderEngine.md  DataClassification.md  DataContainers.md  DataPlatform.md  DataTransformer.adoc  DataTransformer.md  DataTypes.md  Datastores.md  Documentation.md  Dynamic_DAG_Factory_Fixes.md  Ecosystem.md  GettingStarted.md  Glossary.md  GovernanceZone.md  HOWTO_Setup_Dynamic_DAG_Factory.md  HowGitHubIsUsed.md  HowToKubPGStarterSetup.md  HowToReplaceGithubAsTheRepository.md  HowToYellowSetup.md  HowTo_KubPGStarterSetup.md  MergeHandler.md  Performance.md  Platform.adoc  Platform.md  PullRequests.adoc  PullRequests.md  README.adoc  README.md  REST_API.md  SQLAlchemy_Type_Checking.md  Security.md  SwarmRenderer.md  Teams.adoc  Teams.md  Tutorial.md  VsCodeExtension.md  Workspaces.md  vscodeeditbranch.md
test-workflows/: pull-request.yml
yellow_aws_dual_aurora/: .gitignore
(+230 files in other folders)
