[metadata]
name = datasurface
version = 0.0.1
license = Mongo
description = The DSL code for building a datasurface catalog in github
long_description = file: README.rst
author = Billy Newport
author_email = billy@billynewport.com
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Natural Language :: English
   Programming Language :: Python :: 3.11
   Topic :: Database :: Database Engines/Servers
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src