[metadata]
name = datasurface
version = 0.0.1
license = Mongo
description = The DSL code for building a datasurface catalog in github
long_description = file: README.rst
author = Billy Newport
author_email = billy@billynewport.com
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Natural Language :: English
   Programming Language :: Python :: 3.11
   Topic :: Database :: Database Engines/Servers
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   Jinja2==3.1.3
   notebook==7.0.7
   numpy==1.26.3
   psycopg2==2.9.9
   pycountry==23.12.11
   pydantic==2.5.3
   pytest==7.4.4
   python-dateutil==2.8.2
   SQLAlchemy==2.0.25
   types-python-dateutil==2.8.19.20240106
   typing_extensions==4.9.0

[options.packages.find]
where=src